--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,9 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <!-- Google -->
+    <script src="https://apis.google.com/js/platform.js"></script>
+    <meta name="google-signin-client_id" content="472535040243-fnlba6fchvracc8i31vk13ofj3llaqgf.apps.googleusercontent.com">
 </head>
 
 <body class="fix-header card-no-border fix-sidebar">
